# LuminaVaultServer

./: .dockerignore  .env  .env.example  .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  Caddyfile  Dockerfile  Dockerfile.dev  Makefile  PLAN.md  Package.resolved  Package.swift  README.md  default.profraw  docker-compose.production.yml  docker-compose.yml  fix_tags.py  fluent_files.txt  otel-collector-config.production.yaml  otel-collector-config.yaml  posthog-setup-report.md  setup.sh  test_help.txt  test_logs.txt
.github/: CODEOWNERS  pull_request_template.md
bruno/: bruno.json  collection.bru
docker/: backup-entrypoint.sh  backup.Dockerfile  hermes-entrypoint.sh  hermes.Dockerfile  plugin-runner.Dockerfile  run-backup.sh
docs/: CONFIG.md  LUMINAVAULT_DEPLOYMENT_CONFIG_GUIDE.md  ROADMAP-mvp.md  apns-setup.md  architecture.md  backup.md  byo-hermes.md  card-job-promotion.md  connectivity-status.md  deploy.md  her-200-patterns.md  her-216-followups.md  hermes-api-server-surface.md  hetzner-deployment.md  integration.md  jobs.md  llm-models.md  mnemosyne-byo.md  multimodal-ingestion-load-testing.md  plan-hermes-cron-bridge.md  production-env-wiring.md  skills-slash-commands.md  startup.md  testflight-launch.md  vault-export.md  whatsapp-pairing.md
hermes-skills/: README.md
plugin-runner/: Cargo.toml  README.md
plugin-runner/src/: main.rs
scripts/: backup-drill.sh  backup-lib.sh  backup.sh  ci-test-wrapper.sh  generate-bruno.sh  load-multimodal-ingestion.sh  restore.sh  sync-hermes-context.py
web/: index.html  privacy.html  support.html  terms.html
(+1219 files in other folders)
