[package]
name = "luminavault-plugin-runner"
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wasmtime = { version = "46.0.1", default-features = false, features = ["cranelift", "runtime", "std"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
